# driving_theory_test

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
driving_theory_test/: __init__.py  __main__.py  db.py  exam.py  home.py  utils.py
driving_theory_test/static/: question.js
driving_theory_test/templates/exam/: pre-exam.html  question.html  results.html
driving_theory_test/templates/home/: about.html  cover.html
driving_theory_test/templates/layout/: base.html
static/: question.js
templates/: about.html  cover.html  pre-exam.html  question.html  results.html
templates/layout/: base.html
tests/: conftest.py  test_system.py
